<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context=".MyProfile">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/cole" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/name"
            android:textSize="16sp"
            android:fontFamily="@font/allerta"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_answer"
            android:paddingLeft="15dp"
            android:textSize="16sp"
            android:fontFamily="@font/allerta"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/track"
            android:textSize="16sp"
            android:fontFamily="@font/allerta"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_answer"
            android:paddingLeft="15dp"
            android:textSize="16sp"
            android:fontFamily="@font/allerta"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/country"
            android:textSize="16sp"
            android:fontFamily="@font/allerta"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_answer"
            android:paddingLeft="15dp"
            android:textSize="16sp"
            android:fontFamily="@font/allerta"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/email"
            android:textSize="16sp"
            android:fontFamily="@font/allerta"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_answer"
            android:paddingLeft="15dp"
            android:textSize="16sp"
            android:fontFamily="@font/allerta"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/phone_number"
            android:textSize="16sp"
            android:fontFamily="@font/allerta"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneno_answer"
            android:paddingLeft="15dp"
            android:textSize="16sp"
            android:fontFamily="@font/allerta"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/slack_username"
            android:textSize="16sp"
            android:fontFamily="@font/allerta"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Joseph Cole-showers"
            android:paddingLeft="15dp"
            android:textSize="16sp"
            android:fontFamily="@font/allerta"/>

    </LinearLayout>


</LinearLayout>