<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/allerta"
        android:text="@string/HomeHeading"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:background="@color/button_color"
        android:fontFamily="@font/allerta"
        android:text="@string/button_about"
        android:textSize="20sp" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/button_color"
        android:fontFamily="@font/allerta"
        android:text="@string/button_profile"
        android:textSize="20sp" />

</LinearLayout>